--- a/style/look.css
+++ b/style/look.css
@@ -1,3 +1,8 @@
-
+.dice {
+  width: 8em;
+  height: 8em;
+  border-radius: 2em;
+  box-shadow: inset 1em 1em 2em #AAAAAA, inset -1em -1em 2em #222222, 1em 2em 5em #555555;
+  margin: 2em; }
 
 /*# sourceMappingURL=look.css.map */
