--- a/style/layout.css
+++ b/style/layout.css
@@ -1,6 +1,43 @@
-aside,
-aside section {
+@media (max-width: 1600px) and (max-height: 900px) {
+  .playfield--dice {
+    margin: 0; } }
+@media (max-width: 900px) {
+  .avatar {
+    display: none; }
+
+  aside .playfield {
+    flex-direction: column; } }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex; }
+
+html {
+  justify-content: space-between; }
+
+body {
+  flex-direction: row;
+  justify-content: space-around; }
+
+main {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch; }
+
+aside .playfield {
   display: flex;
   justify-content: space-around; }
+
+aside {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column; }
+
+#menu {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column; }
 
 /*# sourceMappingURL=layout.css.map */
