--- a/style/look.css
+++ b/style/look.css
@@ -1,8 +1,82 @@
-.dice {
+html,
+button {
+  font-family: Garamond, Baskerville, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif; }
+
+body {
+  background-color: black; }
+
+.playfield--dice {
+  background-color: white;
   width: 8em;
   height: 8em;
   border-radius: 2em;
   box-shadow: inset 1em 1em 2em #AAAAAA, inset -1em -1em 2em #222222, 1em 2em 5em #555555;
   margin: 2em; }
+
+.maindeco,
+.avatar,
+.play,
+aside {
+  border-style: dotted;
+  border-width: 0.5em;
+  border-radius: 1em; }
+
+.maindeco {
+  border-style: dotted;
+  border-width: 0.5em;
+  border-radius: 1em;
+  border-color: green;
+  background-color: darkgreen;
+  flex-grow: 6;
+  margin: 1em; }
+
+aside {
+  border-width: 0.5em;
+  border-radius: 1em;
+  border-color: lightgray;
+  background-color: #418A7A;
+  margin: 1em;
+  text-align: center; }
+
+aside > * {
+  margin: 1em; }
+
+.play {
+  border-color: lightgray;
+  background-color: white;
+  border-radius: 4em;
+  padding: 1em;
+  flex-grow: 20; }
+
+#menu button {
+  flex-grow: 1;
+  margin: 0.5em;
+  overflow-wrap: break-word; }
+
+button {
+  padding: 1em;
+  background-color: #B43742;
+  margin-color: #962933;
+  border-radius: 3em;
+  outline: none;
+  font-size: 1.5em;
+  border-color: red;
+  border-width: 0.25em; }
+
+.rollbotton {
+  flex-grow: 5; }
+
+.avatar {
+  background-image: url("../static/start.jpg");
+  background-repeat: none;
+  flex-grow: 70;
+  border-color: #418A7A;
+  background-position: center; }
+
+.name {
+  padding: 0;
+  margin: 0;
+  font-size: 2em;
+  flex-grow: 5; }
 
 /*# sourceMappingURL=look.css.map */
