--- a/scss/look.scss
+++ b/scss/look.scss
@@ -30,10 +30,15 @@ body {
 .maindeco,
 .avatar,
 .play,
+.dicedeco,
 aside {
     border-style: dotted;
     border-width: 0.5em;
     border-radius: 1em;
+}
+
+.dicedeco {
+	border-color: lightgray;
 }
 
 .maindeco {
