--- a/style/main.css
+++ b/style/main.css
@@ -16,10 +16,14 @@ body {
 .maindeco,
 .avatar,
 .play,
+.dicedeco,
 aside {
   border-style: dotted;
   border-width: 0.5em;
   border-radius: 1em; }
+
+.dicedeco {
+  border-color: lightgray; }
 
 .maindeco {
   border-style: dotted;
@@ -79,10 +83,10 @@ button {
   font-size: 2em;
   flex-grow: 5; }
 
-@media (max-width: 1600px) and (max-height: 900px) {
+@media (max-width: 1600px) {
   .playfield--dice {
     margin: 0; } }
-@media (max-width: 900px) {
+@media (max-width: 1160px) {
   .avatar {
     display: none; }
 
