--- a/style/look.css
+++ b/style/look.css
@@ -11,7 +11,15 @@ body {
   height: 8em;
   border-radius: 2em;
   box-shadow: inset 1em 1em 2em #AAAAAA, inset -1em -1em 2em #222222, 1em 2em 5em #555555;
-  margin: 2em; }
+  margin: 2em;
+  align-items: center;
+  justify-content: center;
+  display: flex; }
+
+.dice--result {
+  font-size: 4em;
+  margin: 0;
+  padding: 0; }
 
 .maindeco,
 .avatar,
