--- a/style/look.css
+++ b/style/look.css
@@ -21,6 +21,16 @@ body {
   margin: 0;
   padding: 0; }
 
+.result {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.result p {
+  margin: 0;
+  padding: 0;
+  font-size: 3em; }
+
 .maindeco,
 .avatar,
 .play,
